@@ -15,6 +15,8 @@ Bugs fixed
 * #2171: Fix cannot linkcheck url with unicode
 * #2182: LaTeX: support image file names with more than 1 dots
 * #2189: Fix previous sibling link for first file in subdirectory uses last file, not intended previous from root toctree
+* #2003: Fix decode error under python2 (only) when ``make linkcheck`` is run
+
 
 
 Release 1.3.3 (released Dec 2, 2015)
